--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "qrcode-terminal": "^0.12.0",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.1.0",
-    "puppeteer-core": "^10.4.0"
+    "puppeteer": "^10.4.0"
   },
   "engines": {
     "node": "22.x"
