--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "node puppeteer-install.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +14,8 @@
     "qrcode-terminal": "^0.12.0",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.1.0",
-    "puppeteer": "^10.4.0"
+    "puppeteer-core": "^10.4.0",
+    "chrome-aws-lambda": "^10.1.0"
   },
   "engines": {
     "node": "22.x"
