--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "wastbot",
+  "name": "wast",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "whatsapp-web.js": "^1.14.1",
-    "qrcode-terminal": "^0.12.0",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.1.0",
-    "puppeteer-core": "^10.4.0",
-    "chrome-aws-lambda": "^10.1.0"
+    "fluent-ffmpeg": "^2.1.3",
+    "puppeteer": "^24.2.0",
+    "puppeteer-core": "^24.2.0",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.33.5",
+    "whatsapp-web.js": "^1.26.0"
   },
-  "engines": {
-    "node": "22.x"
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
